[package]
name = "base94"
version = "0.2.0"
edition = "2021"
authors = ["Anton Aparin"]
description = "Base94 encoding/decoding library"
license = "MIT"
repository = "https://github.com/Antosser/base94-rs"
documentation = "https://docs.rs/base94"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "0.4.1"
