[package]
name = "base94"
version = "0.2.0"
edition = "2021"
authors = ["Anton Aparin"]
description = "Base94 encoding/decoding library"
license = "MIT"
repository = "https://github.com/Antosser/base94-rs"
documentation = "https://docs.rs/base94"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "base94cli"
path = "src/cli.rs"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
num = "0.4.1"
thiserror = "1.0.44"
